Fix item alignment on mobile devices

--- a/client/src/app/input/input.component.scss
+++ b/client/src/app/input/input.component.scss
@@ -9,6 +9,14 @@
   outline: none;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
 /* Hide up and down arrows from number inputs */
 input[type='number'] {
   -moz-appearance: textfield; /* Firefox */
